fix robotic arm stretch problem

--- a/index.css
+++ b/index.css
@@ -10,11 +10,10 @@ body {
 .jumbotron {
   margin: 0px;
   background-image:url("./media/Robotics.jpg");
-  height: 100%;
-  width: 100%;
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
+  background-position: center;
 }
 
 div.nothing {
